// CE department site — DBML for dbdiagram.io
// Source: server/schema.sql (SQLite). Schema declares no FK constraints;
// relations below are app-level / logical and noted as such.

Table teachers {
  id integer [pk, increment]
  name_th text [not null]
  name_en text
  photo text
  advise_years text    // JSON array e.g. ["1","2","3"]
  contact text
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table students {
  id integer [pk, increment]
  student_id text [unique, not null]
  name_th text [not null]
  name_en text
  photo text
  year integer [not null, note: '1..4']
  class_role text
  track text
  contact text
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table works {
  id integer [pk, increment]
  year integer [not null]
  scope text [not null, note: 'branch | group | solo']
  title text [not null]
  description text
  image text
  author_ids text    // ponytail: JSON array of students.id, not a real FK
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table news_items {
  id integer [pk, increment]
  title text [not null]
  category text [not null, note: 'competition | scholarship | other']
  body text
  link text
  image text
  published_at text
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table class_schedules {
  id integer [pk, increment]
  year integer [not null]
  term integer [not null, default: 1]
  day text [not null, note: 'monday..saturday']
  time_slot text [not null]
  code text [not null]
  name_en text
  name_th text
  room text
  instructor_en text
  instructor_th text
  description_en text
  description_th text
  created_at text [default: 'CURRENT_TIMESTAMP']

  indexes {
    (year, term, day, time_slot) [unique]
  }
}

Table exam_schedules {
  id integer [pk, increment]
  year integer [not null]
  term integer [not null, default: 1]
  code text [not null]
  name_en text
  name_th text
  date_raw text       // ISO yyyy-mm-dd; 9999-12-31 = outside schedule
  start_time text
  end_time text
  midterm_en text
  midterm_th text
  finals_en text
  finals_th text
  created_at text [default: 'CURRENT_TIMESTAMP']

  indexes {
    (year, term, code) [unique]
  }
}

Table users {
  id integer [pk, increment]
  username text [unique, not null]
  password_hash text [not null]
  email text [unique, not null]
  full_name text
  role text [default: 'writer', note: 'superadmin | admin | writer']
  year integer [not null, default: 1, note: 'which year this user manages']
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table rooms {
  id integer [pk, increment]
  name text [not null]
  description text
  image text
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table internship_topics {
  id integer [pk, increment]
  host_branch text [not null]
  title text [not null]
  description text
  year integer
  created_at text [default: 'CURRENT_TIMESTAMP']
}

Table videos {
  id integer [pk, increment]
  title text [not null]
  description text
  file_path text [not null]
  thumbnail text
  category text
  year integer
  created_at text [default: 'CURRENT_TIMESTAMP']
}

// --- App-level relations (not enforced in DDL) ---

// ponytail: JSON array reference — no real FK. Rendered as m:n for clarity.
Ref: works.author_ids > students.id

// Logical scoping: user manages one cohort year.
Ref: users.year - class_schedules.year
Ref: users.year - exam_schedules.year

// Same course appears in class grid + exam list (composite unique on both sides).
Ref: class_schedules.(year, term, code) - exam_schedules.(year, term, code)
